# Petrazy

./: README.md  package-lock.json  package.json
ink/: Cargo.toml  ink.toml  lib.rs
src/: App.js  firebase.js  index.js
src/components/: AccountSelector.js  Auth.js  CreatePetForm.js  Dashboard.js  Loading.js  MoodSelector.js  NoPetMessage.js  PetArea.js  PetDisplay.js  Settings.js
src/context/: AuthContext.js  PetContext.js  SettingsContext.js
src/hooks/: useLocalStorage.js  usePolkadot.js
src/services/: contract.json  contractService.js  firebaseService.js
