[package]
name = "pet_contract"
version = "0.1.0"
authors = ["Your Name"]
edition = "2021"

[dependencies]
ink = { version = ">=5.0.0-rc.2", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

[lib]
name = "pet_contract"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
